# off-grid

./: .gitignore  Makefile  README.md  requirements.txt
.cargo/: config.toml
deploy/: inventory  options.yaml
deploy/playbooks/: morse-edge.yaml
deploy/roles/morse-edge/defaults/: main.yml
deploy/roles/morse-edge/files/: modbus-test-server.service  morse-home-agent.service
deploy/roles/morse-edge/handlers/: main.yml
deploy/roles/morse-edge/tasks/: deploy_morse.yaml  main.yml
deploy/roles/morse-edge/tests/: test.yml
deploy/roles/morse-edge/vars/: main.yml
deployment/: Makefile  namespace.yaml
deployment/grafana/: install.yaml
deployment/grafana/derived/: helm_vars.yaml
deployment/mosquitto/: config-objects.yaml  install.yaml  mosquitto-ingress.yaml  mosquitto.conf
deployment/mosquitto/derived/: helm_vars.yaml
deployment/mosquitto/mosquitto-chart/: Chart.yaml
deployment/mosquitto/mosquitto-chart/templates/: mosquitto-config-config.yaml  mosquitto-data-volume-claim.yaml  mosquitto-deployment.yaml  mosquitto-server-cert-secret.yaml  (+1 more)
doc/: cross_compilation.md  system_service.md
esp32/: .gitignore  Cargo.toml  Makefile  espflash.toml
esp32-riscv-tutorials/: Cargo.toml  Makefile
esp32-riscv-tutorials/.devcontainer/: devcontainer.json
esp32-riscv-tutorials/docs/: README.md
esp32-riscv-tutorials/scripts/: flash.sh
esp32-riscv-tutorials/src/: main.rs
esp32/.cargo/: config.toml
esp32/src/: main.rs  mqtt.rs  util.rs  wifi.rs
esp32/src/modbus/: client.rs  dts777.rs  mod.rs
esp32/src/sensors/: ds18b20.rs  mod.rs  reader.rs
morse-offgrid/: Cargo.toml  Makefile
morse-offgrid/config/: dts777_signals.csv  log4rs.yaml  offgrid.yaml
morse-offgrid/src/: main.rs
morse-offgrid/src/input/: mod.rs
morse-offgrid/src/system/: historical_processor.rs  mod.rs  offgrid.rs
offgrid/: Cargo.toml  Cross.toml  Makefile
offgrid/.cargo/: config.toml
offgrid/config/: log4rs.yaml  morse_home.yaml  power_meter_registers.csv
offgrid/src/: lib.rs  register_types.rs
power-meter/: Cargo.toml  Makefile
power-meter/src/: main.rs
upython/: Makefile  config.json  main.py
upython/smbed/data/: common.py
upython/smbed/sensors/: one_wire.py
upython/smbed/services/: modbus.py  mqtt.py  runtime.py
upython/smbed/util/: __init__.py  logging.py  remote_logging.py
(+1 files in other folders)
