[package]
name = "offgrid-esp32c3"
version = "0.1.0"
authors = ["Atanas Pavlov <nasko.js@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "offgrid-esp32c3"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow = "1.0.93"
bincode = {version = "2.0.0-rc.3", features = ["serde"]}
ds18b20 = "0.1.1"
embedded-hal = "1.0.0"
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.7"}
esp-idf-hal = { version = "0.44", default-features = false }
esp-idf-svc = { version = "0.49.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-sys = "0.35.0"
lazy_static = "1.5.0"
log = "0.4"
rmodbus = "0.9.9"
embedded-hal-async = { version = "1", default-features = false }
embedded-io-async = {version =  "0.6.1", features = ["std"]}
tokio = { version = "1.41.1", features = ["rt", "time", "sync"] }
one-wire-bus = "0.1.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is released
